# Connector

./: CMakeLists.txt  README.md  doctor.bat  install_prereqs.bat  run_robot.bat
config/: qt6_dir.txt  robot.yaml
data/: state.db
scripts/: bootstrap_runtime.ps1  doctor.ps1  install_prereqs.ps1
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/core/: AgentController.cpp  AgentController.h  AppPaths.cpp  AppPaths.h  AudioUtils.cpp  AudioUtils.h  ConfigManager.cpp  ConfigManager.h  GgWaveService.cpp  GgWaveService.h  MemoryStore.cpp  MemoryStore.h  ReasonerEngine.cpp  ReasonerEngine.h  ResearchService.cpp  ResearchService.h  SttEngine.cpp  SttEngine.h  ToolManager.cpp  ToolManager.h  TtsEngine.cpp  TtsEngine.h
